# auto-os

./: .bazelignore  .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  buildspec.yml  filter_files.bzl  flake.nix  go.mod  go.sum  lambda  lock-all.sh  non_modules_extensions.bzl  package.json  paket.dependencies  paket.main.bzl  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix  update-deps.sh
.toolchains/: apko.MODULE.bazel  aws.MODULE.bazel  common.MODULE.bazel  dotnet.MODULE.bazel  golang.MODULE.bazel  java.MODULE.bazel  nixpkgs.MODULE.bazel  oci.MODULE.bazel  python.MODULE.bazel  python.bazel  rust.MODULE.bazel  ts.MODULE.bazel
admiral/api/: BUILD.bazel  package.json  tsconfig.json
admiral/api/src/: AdmiralError.ts  DI.ts  Handler.ts  HandlerMap.ts  index.ts
admiral/api/src/apis/: CreateProject.ts  CreateTenant.ts  DeleteTenant.ts  GetProject.ts  GetTenant copy.ts  GetTenant.ts  Handler.ts  ListProjects.ts  ListTenants.ts  index.ts
admiral/api/src/data/: ProjectManager.ts  TenantManager.ts  Types.ts  index.ts
admiral/api/src/helper/: MachineStarter.ts  OrgAccountHelper.ts  PortfolioHelper.ts  index.ts
admiral/api/src/machine/: Orchestrator.ts  Types.ts  index.ts
admiral/api/src/schema/: InternalProject.ts  Project.ts  Tenant.ts  index.ts
admiral/api/test/: Handler.spec.ts  HandlerMap.spec.ts  MemoryTenantManager.ts
admiral/api/test/apis/: CreateTenant.spec.ts  GetTenant.spec.ts
admiral/cluster-product-assets/: BUILD.bazel
admiral/infrastructure/: BUILD.bazel  package.json  tsconfig.bazel.json  tsconfig.json
admiral/infrastructure/cdk.out/: Provisioner.assets.json  Provisioner.template.json  manifest.json  tree.json
admiral/infrastructure/lib/: index.ts
admiral/infrastructure/lib/cicd/: CicdStack.ts
admiral/infrastructure/lib/orgadmin/: EventingStack.ts  ProvisionerStack.ts
admiral/infrastructure/lib/provisioner/: ProvisionerStack.ts
admiral/infrastructure/lib/registrar/: RegistrarStack.ts
admiral/infrastructure/lib/serviceadmin/: AccountFactoryStack.ts  ApiStack.ts  BaseInfrastructureStack.ts  ClusterOfferingStack.ts  ForgeStack.ts  OrgInfo.ts  RegistrarStack.ts
cluster-baseline-config/: BUILD.bazel
cluster-baseline-config/configs/: internal_users.yml  roles_mapping.yml
handlers/disco-cleanup/: BUILD.bazel  default.nix  flake.nix  pyproject.toml  result
infra-constructs/admiral-constructs/: BUILD.bazel  package.json  tsconfig.json
infra-constructs/admiral-constructs/src/: AdmiralApi.ts  AdmiralFleet.ts  DelegatedAdmins.ts  DelegatedServiceAdmin.ts  Fiefdom.ts  FleetMailbox.ts  FleetTrustedServices.ts  OrgSharedBucket.ts  OrgSharedDockerRepo.ts  OrgSharedKmsKey.ts  ResourceProviderRegistration.ts  ResourceProviderUploader.ts  TenantRegistrationBeacon.ts  index.ts
infra-constructs/admiral-constructs/src/internal/: AdmiralApiEndpoint.ts  AdmiralApiFunc.ts  AdmiralMachine.ts  FiefdomInternal.ts  FiefdomPrereqs.ts  RuleSetActivator.ts  delegated_admin.py  landing_zone_version.py  trusted_svc_enabler.py
infra-constructs/admiral-constructs/src/utils/: idUtils.ts  index.ts  md5.ts
infra-constructs/aos-ami-constructs/: BUILD.bazel  README.md  package.json  run-cdk.js  tsconfig.json
infra-constructs/aos-ami-constructs/src/: BakedAmi.ts  index.ts
infra-constructs/aos-ami-constructs/src/internal/: AmiBakery.ts  CdkImagePipeline.ts  OpenSearchComponent.ts
infra-constructs/aos-cluster-constructs/: .gitignore  BUILD.bazel  BUILD.bazel.backup  cdk-synth-diagram.sh  package.json  run-cdk.js  tsconfig.json
infra-constructs/aos-cluster-constructs/lib/: base.ts  common.ts  index.ts
infra-constructs/aos-cluster-constructs/lib/bakery/: BakeryStack.ts.backup
infra-constructs/aos-cluster-constructs/lib/cicd/: CicdStack.ts
infra-constructs/aos-cluster-constructs/lib/controlPlane/: ControlPlaneStack.ts  EventForwarder.ts  EventNotifications.ts
infra-constructs/aos-cluster-constructs/lib/dataPlane/: DataPlaneStack.ts  SearchCluster.ts  index.ts
infra-constructs/aos-cluster-constructs/lib/foundation/: FoundationStack.ts
infra-constructs/aos-cluster-constructs/src/: base.ts  index.ts
infra-constructs/aos-internal-constructs/: BUILD.bazel  package.json
infra-constructs/aos-internal-constructs/src/: MaestroAdminInvocation.ts  OrgMembershipLookup.ts  ProductIdentifier.ts  RegisteredTenant.ts  StringFuncs.ts  index.ts
infra-constructs/aos-opensearch-constructs/: BUILD.bazel  package.json
infra-constructs/aos-opensearch-constructs/src/: ClusterEndpoint.ts  S3SnapshotRepo.ts  SnapshotPolicy.ts  index.ts
infra/aos-cdk-internal/: BUILD.bazel  jest.config.js  jest.config.ts  package.json  tsconfig.jest.json  tsconfig.json
infra/aos-cdk-internal/lib/: BazelAsset.d.ts  BazelAsset.js  BazelAsset.ts  index.d.ts  index.js  index.ts
infra/aos-cdk-internal/src/: BakedAmi.ts  LoadBalancerCertificate.ts  ParamLink.ts  RootCA.ts  SixyVpc.ts  index.ts
infra/aos-cdk-internal/test/: aos-cdk-internal.spec.js  aos-cdk-internal.spec.ts
infra/aos-deployment/: BUILD.bazel  package.json
infra/aos-deployment/lib/: aos-deployment-stack.ts  base.ts  buildspec.yml  ca-cert.ts  common.ts  generated.ts  index.ts  runner-image.ts
infra/aos-deployment/test/: aos-deployment.test.ts
infra/runner-container-image/: BUILD.bazel  image.lock.json  image.yml
maestro/admin-cli/: .hp-maestro.yml  BUILD.bazel  Makefile  README.md  main.go  package.json
maestro/admin-cli/commands/: BUILD.bazel  config.go  config_cmds.go
maestro/admin-cli/tui/: BUILD.bazel  app.go
maestro/client-cli/: .maestro.yml  BUILD.bazel  Makefile  main.go  package.json
maestro/client-cli/client/: BUILD.bazel  client.go  config.go  methods.go  transport.go  utils.go
maestro/lambda/: BUILD.bazel  Makefile  main.go  package.json
maestro/lambda/apis/: BUILD.bazel  curl_cluster.go  get_root_ca.go  issue_cert.go  register_instance.go  signal_init_failure.go  specialize_cloudwatchagent_conf.go  specialize_opensearch_conf.go
plugins/eventing-plugin/: BUILD.bazel
providers/r53purchaser/: BUILD.bazel  package.json
providers/r53purchaser/src/: index.ts  r53.ts
(+644 files in other folders)
