load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_apko//apko:defs.bzl", "apko_bazelrc")

npm_link_all_packages(name = "node_modules")

gazelle(
    name = "gazelle",
    args = [
        "-build_tags=amd64,linux,logging,lambda.norpc",
    ],
    command = "update",
)

apko_bazelrc()

# gazelle:build_tags logging,lambda.norpc
# gazelle:prefix github.com/HitchPin/maestro
# gazelle:prefix github.com/HitchPin/providers/opensearch/mlcommons-tf-provider
