bazel_dep(name = "rules_go", version = "0.47.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "gazelle", version = "0.36.0")

bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.21.1",
    goarch = "arm64",
    goos = "linux",
)
go_sdk.download(
    version = "1.21.1",
    goarch = "amd64",
    goos = "linux",
)
go_sdk.download(version = "1.21.1")

# go_sdk.nogo(
#    nogo = "//:helloworld",
# )

go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//maestro:go.mod")
use_repo(
    go_deps,
    "com_github_aquasecurity_lmdrouter",
    "com_github_aws_aws_lambda_go",
    "com_github_aws_aws_sdk_go",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_service_autoscaling",
    "com_github_aws_aws_sdk_go_v2_service_cloudwatchlogs",
    "com_github_aws_aws_sdk_go_v2_service_ec2",
    "com_github_aws_aws_sdk_go_v2_service_elasticloadbalancingv2",
    "com_github_aws_aws_sdk_go_v2_service_eventbridge",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_aws_sdk_go_v2_service_secretsmanager",
    "com_github_aws_aws_sdk_go_v2_service_servicediscovery",
    "com_github_aws_aws_sdk_go_v2_service_ssm",
    "com_github_charmbracelet_bubbletea",
    "com_github_davecgh_go_spew",
    "com_github_makenowjust_heredoc",
    "com_github_olivere_elastic_v7",
    "com_github_pkg_errors",
    "com_github_pterm_pterm",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_tylerbrock_colorjson",
    "in_gopkg_yaml_v3",
    "org_golang_x_crypto",
    "org_golang_x_term",
)
