bazel_dep(name = "rules_java", version = "7.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.1")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org_projectlombok_lombok:8.6",
        "software.amazon.awssdk:sdk-core:2.20.86",
        "software.amazon.awssdk:aws-core:2.20.86",
        "software.amazon.awssdk:utils:2.20.86",
        "software.amazon.awssdk:auth:2.20.86",
        "software.amazon.awssdk:sqs:2.20.86",
        "software.amazon.awssdk:cloudwatch:2.20.86",
        "software.amazon.awssdk:netty-nio-client:2.20.86",
        "software.amazon.awssdk:http-client-spi:2.20.86",
        "software.amazon.awssdk:apache-client:2.20.86",
        "software.amazon.awssdk:regions:2.20.86",
        "software.amazon.awssdk:profiles:2.20.86",
        "software.amazon.awssdk:endpoints-api:2.20.86",
        "software.amazon.awssdk:annotations:2.20.86",
        "software.amazon.awssdk:metrics-spi:2.20.86",
        "software.amazon.awssdk:json-utils:2.20.86",
        "software.amazon.awssdk:protocol-core:2.20.86",
        "software.amazon.awssdk:aws-query-protocol:2.20.86",
        "software.amazon.awssdk:aws-json-protocol:2.20.86",
        "software.amazon.awssdk:third-party-jackson-core:2.20.86",
        "org.apache.httpcomponents:httpclient:4.5.14",
        "org.apache.httpcomponents:httpcore:4.4.16",
        "commons-logging:commons-logging:1.2",
        "org.apache.logging.log4j:log4j-1.2-api:2.21.0",
        "org.slf4j:slf4j-api:1.7.36",
        'com.google.guava:guava:33.2.0-jre',
        "commons-codec:commons-codec:1.15",
        "com.fasterxml.jackson.core:jackson-databind:2.17.0",
        "com.fasterxml.jackson.core:jackson-annotations:2.17.0",
        "org.reactivestreams:reactive-streams:1.0.4",
        "io.netty:netty-codec-http:4.1.109.Final",
        "io.netty:netty-codec-http2:4.1.109.Final",
        "io.netty:netty-codec:4.1.109.Final",
        "io.netty:netty-transport:4.1.109.Final",
        "io.netty:netty-common:4.1.109.Final",
        "io.netty:netty-buffer:4.1.109.Final",
        "io.netty:netty-handler:4.1.109.Final",
        "io.netty:netty-transport-classes-epoll:4.1.109.Final",
        "io.netty:netty-resolver:4.1.109.Final",
        "io.netty:netty-resolver-dns:4.1.109.Final",
        "io.netty:netty-transport-native-unix-common:4.1.109.Final",
        "jakarta.json:jakarta.json-api:2.1.2",
        "org.opensearch.client:opensearch-rest-client",
        "org.opensearch.client:opensearch-java:2.10.2",
        "org.apache.httpcomponents.client5:httpclient5:5.3.1",
        "org.apache.httpcomponents.core5:httpcore5:5.2.4",
        "org.apache.httpcomponents.core5:httpcore5-h2:5.2.4"
    ],
    repositories = [
            "https://aws.oss.sonatype.org/content/repositories/snapshots",
            "https://plugins.gradle.org/m2/",
            "https://repo1.maven.org/maven2",
        ],
)



use_repo(maven, "maven")
