bazel_dep(name = "rules_nodejs", version = "6.1.1")

bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc4", dev_dependency = True)  # repeated here only because we use the platforms definitions for rbe

bazel_dep(name = "aspect_rules_ts", version = "3.0.0-alpha.1")
bazel_dep(name = "aspect_rules_jest", version = "0.22.0-rc0")
bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0-rc1")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")
