[tool.poetry]
name = "disco-cleanup"
version = "0.1.0"
description = ""
authors = ["Johnathan <johnathan@hitchpin.com>"]
readme = "README.md"
packages = [{include = "disco_cleanup", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.114"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
