load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

SRC_PATTERNS = [
    "package.json",
    "src/**/*.ts",
    "src/**/*.sh",
]

TEST_PATTERNS = [
    "test/**/*.spec.ts",
]

SOURCES = glob(
    include = SRC_PATTERNS,
    allow_empty = True,
    exclude = TEST_PATTERNS,
)

filegroup(
    name = "assets",
    srcs = [
        "src/dataPlane/setup/bootstrapper-setup.sh",
        "src/dataPlane/setup/node-setup.sh",
        "//handlers/disco-cleanup:zip",
        "//handlers/event-forwarder:zip",
        "//infra-constructs/aos-ami-constructs:assets",
        "//infra-constructs/aos-internal-constructs:assets",
        "//infra-constructs/aos-opensearch-constructs:assets",
        "//maestro/lambda",
    ],
)

ts_project(
    name = "pkg",
    srcs = SOURCES,
    assets = [
        ":assets",
    ],
    data = [
        ":node_modules/aws-cdk-lib",
    ],
    declaration = True,
    declaration_dir = "dist",
    out_dir = "dist",
    root_dir = "src",
    transpiler = "tsc",
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules/@aws/pdk",
        ":node_modules/@types/node",
        ":node_modules/aws-cdk",
        ":node_modules/aws-cdk-lib",
        ":node_modules/constructs",
        ":node_modules/cron-validate",
        ":node_modules/source-map-support",
        ":node_modules/ts-node",
        ":node_modules/typescript",
        ":node_modules/zod",
        "//handlers/disco-cleanup:zip",
        "//handlers/event-forwarder:zip",
        "//infra-constructs/aos-ami-constructs:pkg",
        "//infra-constructs/aos-internal-constructs:pkg",
        "//infra-constructs/aos-opensearch-constructs:pkg",
        "//maestro/lambda",
    ],
)
