load("@aspect_bazel_lib//lib:directory_path.bzl", "directory_path")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

npm_link_all_packages(name = "node_modules")

SRC_PATTERNS = [
    "lib/**/*",
]

TEST_PATTERNS = [
    "test/**/*.spec.ts",
]

ASSET_PATTERNS = [
    "**/*.json",
]

SOURCES = glob(
    include = SRC_PATTERNS,
    exclude = TEST_PATTERNS
)
ASSETS = glob(include = ASSET_PATTERNS)

ts_project(
    name = "aos-cdk-internal",
    assets = ASSETS,
    srcs = SOURCES,
    declaration = True,
    out_dir = "dist",
    transpiler = "tsc",
    deps = [
        ":node_modules/@types/jest",
        ":node_modules/@types/node",
        ":node_modules/aws-cdk-lib",
        ":node_modules/constructs",
        ":node_modules/jest",
        ":node_modules/ts-jest",
        ":node_modules/typescript"
    ],
)


jest_test(
    # A unique name for this target.
    name = "unit_tests",
    # Label pointing to the linked node_modules target where jest is linked, e.g
    node_modules = "//infra/aos-cdk-internal:node_modules",
    config = "jest.config.ts"
)