load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

SRC_PATTERNS = [
    "lib/**/*.ts",
]

TEST_PATTERNS = [
    "test/**/*.spec.ts",
]

SOURCES = glob(
    include = SRC_PATTERNS,
    exclude = TEST_PATTERNS,
    allow_empty = True
)

ts_project(
    name = "aos-cdk-internal",
    srcs = SOURCES,
    declaration = True, 
    transpiler = "tsc",
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules/@types/jest",
        ":node_modules/@types/node",
        ":node_modules/@types/yargs",
        ":node_modules/aws-cdk-lib",
        ":node_modules/constructs",
        ":node_modules/find-up",
        ":node_modules/jest",
        ":node_modules/jest-cli",
        ":node_modules/ts-jest",
        ":node_modules/typescript",
        ":node_modules/deploy-time-build",
        "//infra/aos-assembly-infra:assembly",
        "//maestro/admin-cli"
    ]
)

jest_test(
    # A unique name for this target.
    name = "unit_tests",
    config = "jest.config.ts",
    # Label pointing to the linked node_modules target where jest is linked, e.g
    node_modules = ":node_modules",
)
