load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

SRC_PATTERNS = [
    "package.json",
    "src/**/*.ts",
]

TEST_PATTERNS = [
    "test/**/*.spec.ts",
]

SOURCES = glob(
    include = SRC_PATTERNS,
    allow_empty = True,
    exclude = TEST_PATTERNS,
)

filegroup(
    name = "assets",
    srcs = [
        "src/ami/maestro.yml",
        "src/ami/opensearch.service",
        "src/ami/v2.14.0.yml",
        "src/internal/handler.py",
        "src/internal/param_linker.py",
        "src/opensearch/cluster_ep.py",
        "//infra/runner-container-image:tarball",
        "//maestro/client-cli",
        "//maestro/client-cli:bin-arm64",
        "//maestro/client-cli:bin-x86_64",
        "//plugins/eventing-plugin:zip",
        "//infra/providers/s3-snapshot-repo:zip",
        "//infra/providers/snapshot-policy:zip"
    ],
)

ts_project(
    name = "aos-cdk-internal",
    srcs = SOURCES,
    assets = [
        ":assets",
    ],
    data = [
        ":node_modules/aws-cdk-lib",
    ],
    declaration = True,
    declaration_dir = "dist",
    out_dir = "dist",
    root_dir = "src",
    transpiler = "tsc",
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules/@types/node",
        ":node_modules/@types/yargs",
        ":node_modules/aws-cdk-lib",
        ":node_modules/constructs",
        ":node_modules/find-up",
        ":node_modules/typescript",
        ":node_modules/@auto-os/provider-schemas"
    ],
)
